2011-01-27  vadim  <vadim@netcitadel.com>

	* Cluster.cpp (init): fixes #1995 "Crash when compiling a cluster
	with identical firewalls". Method Cluster::init() must call base
	class method Firewall::init() to get child Policy, NAT and Routing
	objects created.

	* CompilerDriver_pix_run.cpp (run): fixes #1994 "Crash when
	compiling a firewall in an imported Library". Compilers should
	reset any read-only flags in the copy of object tree they work
	with before they make any modifications.

2011-01-26  vadim  <vadim@netcitadel.com>

	* ProjectPanel_events.cpp (event): see #1994 "Crash when compiling
	a firewall in an imported Library". To prevent crash, added check
	to make sure firewall object is not read-only before an attempt to
	update its "last compiled" or "last installed" timestamp.

	* ProjectPanel_file_ops.cpp (fileExport): fixes #1993 "V4.2 on
	Windows - export Library shows the file type as Firewall Builder
	2"

	* FWBSettings.h (SETTINGS_PATH_PREFIX): fixes #1992 " V4.2 on
	Windows - installer error can't find Secure Shell utility"

	* init.cpp (init): fixed #1989 "variables respath and librespath
	are redundant and copy Constants::getTemplateDirectory()". Got rid
	of global variables sysfname, tempfname, librespath, respath and
	localepath; will now use class Constants to keep this information.

2011-01-25  vadim  <vadim@netcitadel.com>

	* src/fwbuilder/libfwbuilder-config.h.in: fixes #1937 "RES_DIR
	macro is defined twice". Got rid of duplicate definition of this
	macro.

	* FWObject.cpp (updateNonStandardObjectReferences): see #1985
	added virtual function updateNonStandardObjectReferences() that is
	supposed to update any references to objects stored as attributes.

	* ACL.cpp (trimLine): fixes #1986 "Cisco ASA remarks should be
	truncated to 100 characters or less". Trimming all lines used for
	access list remarks to <100 characters. Remarks can only be less
	than 101 characters on PIX/ASA and less than 100 characters on
	IOS.
